# justatom

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  HISTORY.md  LAUNCH.md  LICENSE  MANIFEST.in  Makefile  README.md  config.yaml  docker-compose.yaml  hypercorn.conf  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-mlx.txt  requirements.txt
.data/: polaroids.ai.data.json
.dataset/: custom_questions.json
.github/workflows/: check_code.yml  ci.yaml  deploy-docs.yaml  docs-check.yaml  docs-reusable.yaml  python-app.yml  tests.yml
configs/: evaluate.yaml  train.yaml
configs/dataset/: boolq-ru.yaml  electrical-engineering-ru.yaml  justatom.yaml  meme-russian-ir.yaml  miracl-ru.yaml  mmarco-russian.yaml  text-meme.yaml
docs/: architecture.md  getting-started.md  index.md  launch-guide.md
docs/modules/: api-cli.md  data-processing.md  index.md  modeling.md  runtime.md  storage.md
docs/stylesheets/: extra.css
farm/: __init__.py  eval.py  experiment.py  file_utils.py  infer.py  inference_rest_api.py  train.py  utils.py
farm/conversion/: convert_tf_checkpoint_to_pytorch.py  transformers.py
farm/data_handler/: data_silo.py  dataloader.py  dataset.py  input_features.py  inputs.py  nq_utils.py  processor.py  samples.py  utils.py
farm/evaluation/: metrics.py  (+3 more)
notebook/: note-flux.ipynb  rabbit_consumer.py  rabbit_producer.py
scripts/: run_eval_model_on_datasets.sh  run_pipeline.sh
tests/: test_builtin_config_loader.py  test_encoders.py  test_eval_data_normalization.py  test_eval_metrics.py  test_eval_streaming_integration.py  test_hf_dataset_fallback.py  test_m1lmrunner.py  test_qwen3_embedding_model.py  test_retriever_shape_and_factory.py  test_safe_negative_sampling.py  test_scenario_configs.py  test_simple.py  test_soft_contrastive_loss.py  test_streaming_loader.py  test_train_data_preparation.py  test_utils.py
(+183 files in other folders)
