[project]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".data",
    "*.ipynb"
]

# Same as Black.
line-length = 132
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
